--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "6097aa02-20d7-4c8a-8e24-89b203d33090"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
